<resources>
    <string name="app_name" translatable="false">Market Trade - Simulation</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="USD"> / USD</string>


    <string name="home" >Home</string>
    <string name="Market" >Market</string>
    <string name="Trade" >Trade</string>
    <string name="Wallet" >Wallet</string>
    <string name="score_board" translatable="false">Score Board</string>
    <string name="hintSearch" >Search Coin</string>
    <string name="filter_coin" >Filter Coin</string>
    <string name="name">Name:</string>
    <string name="lastPrice">last Price:</string>
    <string name="change24">24h change:</string>
    <string name="textBuy">Buy</string>
    <string name="textSell">Sell</string>
    <string name="Avaible">Available</string>
    <string name="TotalValue">Total Value ( $ )</string>
    <string name="Search">Search</string>
    <string name="Symbol">Coin</string>
    <string name="Amount">Amount</string>
    <string name="Value">Value ($)</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="totalUSD">Total (USD)</string>
    <string name="date">Date</string>
    <string name="state">State</string>
    <string name="trueValue">please input True Value</string>
    <string name="proggresState">Progress is failed, Check your balance</string>
    <string name="enterAmountDialog">please enter amount</string>
    <string name="succes">Progress Succesed</string>
    <string name="fail">Progress Failed</string>
    <string name="addZeros">0.000000</string>
    <string name="page_name">Search Coin</string>

    <string name="notification_title">Let\'s get Free Notification</string>
    <string name="notification_subTitle">To get free notification allow notification permission</string>
    <string name="notification_allow_button">Allow</string>


    <string name="loading">Loading</string>

    <string name="popular_coins">Popular Coins</string>
    <string name="market_cap">Market Cap:</string>
    <string name="cripto_buy_sel">Crypto Buy/Sell</string>
    <string name="cripto_image">Crypto Image</string>
    <string name="daily_change">Daily Change: </string>
    <string name="available_amount">Available Amount: </string>
    <string name="amount">Amount: </string>
    <string name="Decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="total_cost_text">Total Transaction Cost</string>
    <string name="total_cost">Total Cost: </string>
    <string name="total_balance">Total Balance </string>
    <string name="buy_sel_operations_text">Buy/Sell Operations</string>

    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="operation_text">Operation: </string>
    <string name="cripto_wallet">Crypto Wallet</string>
    <string name="transactions">Transaction History</string>
    <string name="value">Value</string>



    <string name="profile">Profile</string>
    <string name="balance">Balance </string>




    <string name="create_account_text">Create Account</string>
    <string name="create_account_information">Hesap oluşturulduğunda, yerel olarak yapılan işlemler korunmaz.</string>

    <string name="watchlist_empty">Your watchlist empy</string>
    <string name="click_to_add_something">Click to add watchlist</string>
    <string name="login">Login</string>
    <string name="sign_up">Sing Up</string>
    <string name="please_login_or_signup">Log in or sign up to access watchlist</string>
    <string name="watchlist_text">Watchlist</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Logout</string>

    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="lowest_percentage">Lowest Percentage</string>
    <string name="highest_percentage">Highest Percentage</string>
    <string name="empty" translatable="false" />
    <string name="default_text">Default</string>
    <string name="detail">Detail</string>
    <string name="no_transaction_yet">No Transactions Yet</string>
    <string name="no_transaction_description">It seems like you haven\'t made any transactions yet.</string>
    <string name="go_back">Go Back</string>
    <string name="welcome">Welcome</string>
    <string name="portfolio_text">Portfolio</string>
    <string name="view_all">View all</string>
    <string name="total_coin_value">Total Coin Value</string>
    <string name="dollar_holdings">Dollar Holdings</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="didnt_recieve_code">Didn\'t receive the code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_accounr">Don\'t have an account?</string>
    <string name="filter">Filter</string>
    <string name="owned_balance">Owned Shares</string>
    <string name="quantity">Quantity</string>
    <string name="verificaiton_code">Verification Code</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remove_in_watchlist">remove in watchlist</string>
    <string name="add_watchlist">add watchlist</string>
    <string name="name_and_surname_text">Name and surname</string>

    <string name="good_morning">Good Morning</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="Symbol_text">Symbol</string>
    <string name="change">Change</string>
    <string name="currencies">Currencies</string>
    <string name="expand">Expand</string>
    <string name="less">Less</string>


</resources>