<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homePage"
        app:showAsAction="withText"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/marketPage"
        android:icon="@drawable/market"
        app:showAsAction="withText"
        android:title="@string/Market" />

    <item
        android:id="@+id/tradePage"
        app:showAsAction="withText"
        android:icon="@drawable/trade"
        android:title="@string/Trade" />

    <item
        android:id="@+id/walletPage"
        android:icon="@drawable/wallet"
        app:showAsAction="withText"
        android:title="@string/Wallet" />
    <item
        android:id="@+id/history_of_trade"
        android:icon="@drawable/wallet"
        android:title="@string/Wallet"
        android:visible="false"
        />

</menu>