<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titles"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:padding="2dp">

        <TextView
            android:id="@+id/coinName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingStart="1dp"
            android:paddingTop="5dp"
            android:paddingEnd="1dp"
            android:text="@string/name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/coinAmount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:text="@string/Amount"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/coinPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:padding="5dp"
            android:text="@string/price"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/total"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:padding="5dp"
            android:paddingTop="5dp"
            android:text="@string/date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/operation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="5dp"
            android:text="@string/state"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/titles"
        android:background="#000000" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view1"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="70dp" />

</RelativeLayout>