<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/totalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/ust_logo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="12dp"
                    android:background="@color/white"
                    android:paddingTop="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ust"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/totalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/TotalValue"
                    android:textAlignment="center"
                    android:textColor="@color/onClickSellBack"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ust_logo"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/totalValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/pozitive"
                    android:textSize="25sp"
                    app:layout_constraintTop_toBottomOf="@id/ust_logo" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B5B5B5"
                app:layout_constraintTop_toBottomOf="@id/totalLayout" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="#B5B5B5"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <EditText
                android:id="@+id/searchMyCoins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/border_wallet_search"
                android:drawableEnd="@drawable/search"
                android:hint="@string/Search"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:textColorHint="#0E0E0E"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/divider3" />

            <LinearLayout
                android:id="@+id/tableName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/searchMyCoins">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingStart="2dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="0dp"
                    android:text="Logo"
                    android:textColor="@color/onClickSellBack"
                    android:textSize="20sp"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:paddingTop="5dp"
                    android:text="@string/Symbol"
                    android:textColor="@color/onClickSellBack"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:paddingTop="5dp"
                    android:text="@string/Amount"
                    android:textColor="@color/onClickSellBack"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="3dp"
                    android:text="@string/Value"
                    android:textColor="@color/onClickSellBack"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DCD7D7"
                app:layout_constraintTop_toBottomOf="@id/tableName" />

            <ScrollView
                android:id="@+id/coinsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/divider2">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/myCoins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>