<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickLisener"
            type="com.finance.trade_learn.clickListener.ListenerInterface" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/infoLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"

            >

            <ImageView
                android:id="@+id/coin_logo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:padding="5dp"

                />

            <TextView
                android:id="@+id/coinName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingTop="14dp"
                android:textAlignment="center"
                android:textColor="#202BED"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/coinChangePercent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:paddingStart="3dp"
                android:paddingTop="14dp"
                android:paddingEnd="2dp"
                android:textColor="@color/negative"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/selection"
            app:layout_constraintTop_toBottomOf="@id/infoLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Buy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/Sell"
                android:paddingHorizontal="60dp"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:background="@drawable/buy_style"
                android:onClick="@{view-> clickLisener.ClickListener(view)}"
                android:textAlignment="center"
                android:text="@string/textBuy"
                android:textColor="@color/onClickBuyText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Sell"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/Buy"
                android:paddingHorizontal="60dp"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:textAlignment="center"
                android:background="@drawable/sell_style"
                android:onClick="@{view-> clickLisener.ClickListener(view)}"
                android:text="@string/textSell"
                android:textColor="@color/SellText"
                android:textSize="25sp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/mainLayout"
            app:layout_constraintTop_toBottomOf="@id/selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp">

            <EditText

                android:id="@+id/coinPrice"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/style_trade"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/price"
                android:textAlignment="center"
                android:textColorHint="#474242" />


            <RelativeLayout
                android:id="@+id/relayout_amount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_trade">

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:onClick="@{view-> clickLisener.ClickListener(view)}"
                    android:padding="15dp"
                    android:src="@drawable/minus" />

                <EditText
                    android:id="@+id/coinAmount"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_toStartOf="@id/raise"
                    android:layout_toEndOf="@id/minus"
                    android:background="@drawable/none"
                    android:hint="@string/Amount"
                    android:inputType="number|numberDecimal"
                    android:nextFocusRight="@drawable/raise"
                    android:textAlignment="center"
                    android:textColorHint="#474242" />

                <ImageView
                    android:id="@+id/raise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:onClick="@{view-> clickLisener.ClickListener(view)}"
                    android:padding="15dp"
                    android:src="@drawable/raise" />


            </RelativeLayout>

            <EditText
                android:id="@+id/Total"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_trade"
                android:focusable="false"
                android:hint="@string/totalUSDT"
                android:inputType="number|numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#474242" />


            <RelativeLayout
                android:id="@+id/relayout_avaible"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@id/avaibleAmount"
                    android:paddingTop="10dp"
                    android:text="@string/Avaible"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/avaibleAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/symbol"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="10dp"
                    android:text="0"
                    android:textColor="@color/onClickSellBack"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:text="USDT"
                    android:textColor="@color/onClickBuyBack"
                    android:textSize="17sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/percent_avaible"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/percent_of_avaible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minWidth="100dp"
                    android:outlineAmbientShadowColor="@color/pozitive"
                    android:outlineSpotShadowColor="@color/black"
                    android:shadowColor="@color/negative" />


            </RelativeLayout>

            <Button
                android:id="@+id/doTrade"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/onClickBuyBack"
                android:onClick="@{view-> clickLisener.ClickListener(view)}"
                android:text="@string/textBuy"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/history_of_trade"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="@{view-> clickLisener.ClickListener(view)}"
                    android:src="@drawable/history_of_trade" />

            </RelativeLayout>


        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            ads:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-2861105825918511/5956574073">
        </com.google.android.gms.ads.AdView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
